# Eggo_AI

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html
.github/workflows/: deploy.yml
ai-service-python/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
ai-service-python/alembic/: env.py
ai-service-python/app/: config.py  deps.py  main.py
ai-service-python/app/api/v1/: router.py
ai-service-python/app/api/v1/endpoints/: ai.py  health.py  news.py  tasks.py
ai-service-python/app/core/: exceptions.py  logging.py  security.py
ai-service-python/app/models/: __init__.py  ai_news.py  base.py  fund.py  fund_nav_daily.py  trade_signal.py  user.py  watchlist.py
ai-service-python/app/repositories/: news_repo.py  signal_repo.py
ai-service-python/app/schemas/: ai.py  news.py  signal.py
ai-service-python/app/services/: ai_filter_service.py  news_service.py  signal_service.py
ai-service-python/app/tasks/: __init__.py  celery_app.py
ai-service-python/app/tasks/ai/: analyze_news.py  generate_signal.py
ai-service-python/app/tasks/crawler/: fund_nav.py  news.py
ai-service-python/app/utils/: helpers.py  http_client.py  llm_formatter.py
ai-service-python/scripts/: start_beat.sh  start_worker.sh
ai-service-python/tests/: conftest.py
assets/: index-C2R5IXVw.js  index-CwUgnKbv.css  index-QR1_r5eZ.js
backend-go/: .gitignore  Dockerfile  README.md  go.mod  go.sum
cloudflare-proxy/: DEPLOY.md  package.json  wrangler.toml
eggo-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+89 files in other folders)
